--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Telexize",
-  "description": "Redirect index.hu to telex.hu",
+  "description": "Simple extension, that redirects index.hu to telex.hu",
   "author": "peszo",
   "version": "0.1",
   "permissions": [
@@ -15,5 +15,10 @@
   "browser_action": {
     "default_icon": "icons/tlxz_64.png",
     "default_title": "Olvass inkább Telex-et!"
+  },
+  "icons": {
+    "16": "icons/tlxz_64.png",
+    "32": "icons/tlxz_64.png",
+    "64": "icons/tlxz_64.png"
   }
 }
